fix framework testing modules