@@ -13,3 +13,7 @@ kotlin {
         }
     }
 }
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
